--- a/Calculator/Calculator.html
+++ b/Calculator/Calculator.html
@@ -6,7 +6,7 @@
 
     <style>
         body{
-            background-color:burlywood;
+            background-color:#0057FF;
         }
         .box{
             background-color:#09faee;
