--- a/Calculator/Calculator.html
+++ b/Calculator/Calculator.html
@@ -51,12 +51,7 @@
              border-radius:8px ;
              margin-left: 17px;
          }
-         .button black{
-             color:white ;
-             background-color:black ;
-             border-bottom:black 3px solid;
-             border-top: #6f6f6f 3px solid;
-         }
+         
     </style>
     <script>
         function TakeValue(val){
@@ -81,31 +76,31 @@
             <div class="keys">
 
                 <p>
-                    <input type="button" class="button black" value="7" onclick='TakeValue("7")'>
-                    <input type="button" class="button black" value="8" onclick='TakeValue("8")'>
-                    <input type="button" class="button black" value="9" onclick='TakeValue("9")'>
-                    <input type="button" class="button black" value="*" onclick='TakeValue("*")'>
+                    <input type="button" value="7" onclick='TakeValue("7")'>
+                    <input type="button" value="8" onclick='TakeValue("8")'>
+                    <input type="button" value="9" onclick='TakeValue("9")'>
+                    <input type="button" value="*" onclick='TakeValue("*")'>
                 </p>
 
                 <p>
-                    <input type="button" class="button black" value="4" onclick='TakeValue("4")'>
-                    <input type="button" class="button black" value="5" onclick='TakeValue("5")'>
-                    <input type="button" class="button black" value="6" onclick='TakeValue("6")'>
-                    <input type="button" class="button black" value="-" onclick='TakeValue("-")'>
+                    <input type="button" value="4" onclick='TakeValue("4")'>
+                    <input type="button" value="5" onclick='TakeValue("5")'>
+                    <input type="button" value="6" onclick='TakeValue("6")'>
+                    <input type="button" value="-" onclick='TakeValue("-")'>
                 </p>
 
                 <p>
-                    <input type="button" class="button black" value="1" onclick='TakeValue("1")'>
-                    <input type="button" class="button black" value="2" onclick='TakeValue("2")'>
-                    <input type="button" class="button black" value="3" onclick='TakeValue("3")'>
-                    <input type="button" class="button black" value="+" onclick='TakeValue("+")'>
+                    <input type="button" value="1" onclick='TakeValue("1")'>
+                    <input type="button" value="2" onclick='TakeValue("2")'>
+                    <input type="button" value="3" onclick='TakeValue("3")'>
+                    <input type="button" value="+" onclick='TakeValue("+")'>
                 </p>
 
                 <p>
-                    <input type="button" class="button black" value="0" onclick='TakeValue("0")'>
-                    <input type="button" class="button black" value="C" onclick='ClearValue("")'>
-                    <input type="button" class="button black" value="=" onclick='CalculateValue("=")'>
-                    <input type="button" class="button black" value="/" onclick='TakeValue("/")'>
+                    <input type="button" value="0" onclick='TakeValue("0")'>
+                    <input type="button" value="C" onclick='ClearValue("")'>
+                    <input type="button" value="=" onclick='CalculateValue()'>
+                    <input type="button" value="/" onclick='TakeValue("/")'>
                 </p>
             </div>
         </div>
