--- a/Marksheet/marksheet.html
+++ b/Marksheet/marksheet.html
@@ -20,7 +20,7 @@
         	text-align: left;
         }*/
         .center{
-        	border-color: black
+        	border-color: black;
         }
         div{
         	border:solid; 
