--- a/Portfolio/MainPage.html
+++ b/Portfolio/MainPage.html
@@ -119,7 +119,7 @@
     <!-- HOME -->
     <div id="home">
     	<h1>FRONT-END</br> DEVELOPER</h1>
-    	<img src="specs.png" width="50%">
+    	<img src="img/specs.png" width="50%">
     	
     </div>
 
@@ -157,21 +157,21 @@
     <div id="contact">
     	<h1>CONTACT</h1>
     	<div id="facebook">
-    		<img src="facebook.png">
+    		<img src="img/facebook.png">
     		<div id="facebooklink">
     			<a href="https://www.facebook.com">MY FACEBOOK ID</a>
     		</div>
     	</div>
 
     	<div id="whatsapp">
-    		<img src="whatsapp.png">
+    		<img src="img/whatsapp.png">
     		<div id="whatsapplink">
     			<a href="https://www.whatsapp.com">MY WHATSAPP NO</a>
     		</div>
     	</div>
 
     	<div id="twitter">
-    		<img src="twitter.png">
+    		<img src="img/twitter.png">
     		<div id="twitterlink">
     			<a href="https://www.twitter.com">MY TWITTER ID</a>
     		</div>
@@ -182,17 +182,17 @@
     <div id="gallery">
     	<h1>GALLERY</h1>
     	<div>
-    	<img src="chameleon.jpg">
+    	<img src="img/chameleon.jpg">
     	<h2>THE CHAMELEON</h2>
     	</div>
 
     	<div>
-    		<img src="train.jpg">
+    		<img src="img/train.jpg">
     	<h2>ELECTRIC TRAIN</h2>
     	</div>
      
     	<div id="swing">
-    		<img src="swing.jpg">
+    		<img src="img/swing.jpg">
     	<h2>SWING</h2>
     	</div>
 
